5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1671_1100.log
== TEST (2019-04-24 14:53:53) 
-- CODE:
c = int(input("valor da cedula: "))
if(c=!2)or (c=!5)or (c=!10) or (c=!20) or (c=!50)c(=!100)
	print("Animal: invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onça-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("invalido")
-- ERROR:
File "XXXX", line 2
    if(c=!2)or (c=!5)or (c=!10) or (c=!20) or (c=!50)c(=!100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:03) 
-- CODE:
c = int(input("valor da cedula: "))
if(c=!2) or (c=!5) or (c=!10) or (c=!20) or (c=!50)c(=!100)
	print("Animal: invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onça-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("invalido")
-- ERROR:
File "XXXX", line 2
    if(c=!2) or (c=!5) or (c=!10) or (c=!20) or (c=!50)c(=!100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:20) 
-- CODE:
c = int(input("valor da cedula: "))
if(c=!2) or (c=!5) or (c=!10) or (c=!20) or (c=!50)c(=!100):
	print("Animal: invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onça-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("invalido")
-- ERROR:
File "XXXX", line 2
    if(c=!2) or (c=!5) or (c=!10) or (c=!20) or (c=!50)c(=!100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:13) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", valor)
if(c=!2) or (c=!5) or (c=!10) or (c=!20) or (c=!50)c(=!100):
	print("Animal: invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onça-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("invalido")
-- ERROR:
File "XXXX", line 3
    if(c=!2) or (c=!5) or (c=!10) or (c=!20) or (c=!50)c(=!100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:21) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", valor)
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onça-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("invalido")
-- ERROR:
File "XXXX", line 3
    elif(c == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:14) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", valor)
elif(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onça-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- ERROR:
File "XXXX", line 3
    elif(c == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:28) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", valor)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onça-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Entrada:", valor)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:57:41) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onça-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- EXECUTION TIME:
0.154543
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:58:49) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onça-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:58:56) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onça-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- EXECUTION TIME:
0.137596
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:59:46) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onça-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:59:58) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onça-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:00:22) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onca-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:00:27) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onca-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "invalido")
-- EXECUTION TIME:
0.148661
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:00:46) 
-- CODE:
c = int(input("valor da cedula: "))
print("Entrada:", c)
if(c == 2):
	print("Animal:", "Tartaruga")
elif(c == 5):
	print("Animal:", "Garca")
elif(c == 10):
	print("Animal:", "Arara")
elif(c == 20):
	print("Animal:", "Mico-leao-dourado")
elif(c == 50):
	print("Animal:", "Onca-pintada")
elif(c == 100):
	print("Animal:", "Garoupa")
else:
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.103109
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
